--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,7 @@
     "socket.io": "^4.6.1",
     "serialport": "^12.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "v4l2camera": "^1.3.2"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
