--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,9 +8,12 @@ SERIAL_DEVICE=/dev/ttyUSB0
 SERIAL_BAUD=57600
 
 # Video Configuration
-VIDEO_RESOLUTION=1920x1080
-MJPEG_QUALITY=80
-MJPEG_FPS=30
+# Resolution: Higher = better quality but more bandwidth (1920x1080, 1280x720, 640x480)
+VIDEO_RESOLUTION=1280x720
+# Quality: 1-100, Lower = less bandwidth, faster on slow networks (recommended: 40-60 for 4G)
+MJPEG_QUALITY=50
+# FPS: Lower = less bandwidth, smoother on slow networks (recommended: 10-20 for 4G)
+MJPEG_FPS=15
 
 # CORS Configuration
 CORS_ORIGIN=*
